--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1632,3 +1632,10 @@ xsigin/signup popup
 .town_two{
   padding-bottom: 20px;
 }
+.button_vibor_trans{
+	color: #FFFFFF;
+	font-size: 18px;
+	float: left;
+	padding-top: 10px;
+}
+
